--- a/app.json
+++ b/app.json
@@ -2,8 +2,8 @@
   "id": "5f61deff-9443-4b57-9203-586e4f8d3c82",
   "name": "SD Seminar",
   "publisher": "Default publisher",
-  "brief": "Brief Description of the Seminar Module",
-  "description": "Long description of the Seminar Module",
+  "brief": "New Seminar Module",
+  "description": " Seminar Module",
   "version": "1.0.0.0",
   "privacyStatement": "",
   "EULA": "",
